--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -97,36 +97,96 @@
             </div>
 
             <div class="span11">
-              <ul class="nav nav-tabs">
+              <ul class="nav nav-tabs" id="tab">
                 <li class="active">
-                  <%= link_to 'Registros Aplicables', '#' %>                
+                  <%= link_to 'Registros Aplicables', '#tab-registros' %>                
                 </li>
-                <li><%= link_to 'Documentos', '#' %></li>
-                <li><%= link_to 'Observaciones', '#' %></li>
-                <li><%= link_to 'Seguimiento', '#' %></li>
+                <li><%= link_to 'Documentos', '#tab-documentos', 'data-togle' => 'tab' %></li>
+                <li><%= link_to 'Observaciones', '#tab-observaciones', 'data-togle' => 'tab' %></li>
+                <li><%= link_to 'Seguimiento', '#tab-seguimiento', 'data-togle' => 'tab' %></li>
               </ul>
             </div>
             <div class="span11">
-              <table class="table table-condensed table-striped">
-                <thead>
-                  <tr>
-                    <th>Registros Aplicables - Tarea Actual</th>
-                    <th>Tipo</th>
-                    <th>Estado</th>
-                    <th>&nbsp;</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% 10.times do %>
-                    <tr>                      
-                      <td>Lorem Ipsum has been the</td>
-                      <td><span class="label label-success">Requerido</span></td>
-                      <td><span class="label label-success">Íntegro</span></td>
-                      <td><button class="btn btn-primary">Acciones</button></td>
-                    </tr>
-                  <% end %>
-                </tbody>
-              </table>
+              <div id="tabContent" class="tab-content">
+                <div id="tab-registros" class="tab-pane active">
+                  <table class="table table-condensed table-striped">
+                    <thead>
+                      <tr>
+                        <th>Registros Aplicables - Tarea Actual</th>
+                        <th>Tipo</th>
+                        <th>Estado</th>
+                        <th>&nbsp;</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% 10.times do %>
+                        <tr>                      
+                          <td>Lorem Ipsum has been the</td>
+                          <td><span class="label label-success">Requerido</span></td>
+                          <td><span class="label label-success">Íntegro</span></td>
+                          <td><button class="btn btn-primary">Acciones</button></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                </div>
+                
+                <div id="tab-documentos" class="tab-pane">
+                  
+                  <ul class="nav nav-tabs" id="tabDocs">
+                    <li class="active">
+                      <%= link_to 'Aportados por el ciudadano', '#tab-docs-ciudadano' %>                
+                    </li>
+                    <li><%= link_to 'Todos los documentos', '#tab-docs-all', 'data-togle' => 'tab' %></li>                    
+                  </ul>                  
+
+                  <div id="tabDocContent" class="tab-content">
+                    <div id="tab-docs-ciudadano" class="tab-pane active well">
+                      <div class="btn-group">
+                        <%= link_to icon_tag('Nuevo documento', :class => 'icon-play icon-white'), '#', :class => 'btn btn-primary' %>
+                        <%= link_to icon_tag('Descargar en zip', :class => 'icon-ok-sign icon-white'), '#', class: 'btn btn-primary' %>                        
+                      </div>
+
+                      <table class="table table-condensed table-striped">                        
+                        <tbody>
+                          <% 10.times do %>
+                            <tr>                      
+                              <td>Lorem Ipsum has been the</td>                              
+                              <td><button class="btn btn-primary">Acciones</button></td>
+                            </tr>
+                          <% end %>
+                        </tbody>
+                      </table>
+                    </div>
+
+                    <div id="tab-docs-all" class="tab-pane">
+                      all docs
+                    </div>
+                  </div>                                      
+                </div>
+                
+                <div id="tab-observaciones" class="tab-pane">
+                  observaciones
+                </div>
+                
+                <div id="tab-seguimiento" class="tab-pane">
+                  seguimiento
+                </div>
+              </div>              
             </div>
           </div>
         </section>
+
+  <% content_for :javascripts do %>
+  <script type="text/javascript">
+    $('#tab a').click(function (e) {
+      e.preventDefault();
+      $(this).tab('show');
+    });
+    
+    $('#tabDocs a').click(function (e) {
+      e.preventDefault();
+      $(this).tab('show');
+    })
+  </script>  
+  <% end %>
