--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,5 +126,6 @@
     <script src="/assets/js/tests/vendor/jquery.js"></script>
     <script src="../assets/js/bootstrap-transition.js"></script>
     <script src="../assets/js/bootstrap-collapse.js"></script>-->
+    <%= yield :javascripts %>
   </body>
 </html>
