--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,6 +1,20 @@
 <section>
   <div class="page-header">
     <h1>Roles <small>Lista de roles</small></h1>
+    <fieldset>
+      <legend>Busqueda</legend>
+      <%= form_for controller_name, :method => :get do %>
+      <table>
+        <tr>
+          <td><%= label_tag 'Nombre'%> </td>
+          <td><%= text_field_tag 'nombre', params[:nombre]%> </td>
+          <td>&nbsp;</td>
+          <td><%= submit_tag 'Buscar', :class => 'btn'%></td>
+        </tr>
+      </table>
+      <% end %>
+    </fieldset>
+    
   </div>
 
   <div class="well">
@@ -23,6 +37,7 @@
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
+                <li><%= link_to icon_tag('Mostrar', :class => 'icon-list-alt'), edit_rol_path(rol) %></li>
                 <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_rol_path(rol) %></li>
                 <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), rol, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
 
