--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,6 +1,17 @@
+ <% if @rol.errors.any? %>  
+    <div class="alert alert-block alert-error">  
+      <h4 class="alert-heading"><%= pluralize(@rol.errors.count, "error") %> 
+        <%= @rol.errors.count > 1 ? 'han' : 'ha' %> impedido que el registro sea guardado:</h4>  
+      <ul>  
+        <% @rol.errors.full_messages.each do |msg| %>  
+          <li><%= msg %></li>  
+        <% end %>  
+      </ul>  
+    </div>  
+  <% end %>  
 <% ant = '' %>
 <%= simple_form_for @rol, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.error_notification %>
+  <%#= f.error_notification %>
 
   <%= f.input :nombre %>
   
