cambios asignados en Roles, Cargos, Unidades de tiempos y Ciudades

--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -27,7 +27,7 @@
           <td><%= usuario.apellidos %></td>
           <td><%= usuario.documento %></td>
           <td><%= usuario.ente_id %></td>
-          <td><%= usuario.rol.nombre %></td>
+          <%#*<td><%= usuario.rol.nombre </td>%>
           <td>
 
             <div class="btn-group">              
