--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -4,6 +4,20 @@
   </div>
 
   <div class="well">
+    <fieldset>
+      <legend>Buscador</legend>
+      <%= form_for controller_name, :method => :get do %>
+        <table>
+          <tr>
+            <td><%= label_tag 'Nombre'%> </td>
+            <td><%= text_field_tag 'nombre', params[:nombre]%> </td>
+            <td>&nbsp;</td>
+            <td><%= submit_tag 'Buscar', :class => 'btn'%></td>
+          </tr>
+        </table>
+      <% end %>
+    </fieldset>
+
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_cargo_path, :class => 'btn btn-primary' %>
   </div>
   <br />
@@ -11,15 +25,15 @@
   <% if @cargos.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>Nombre</th>
-              
+        <th>Nombre</th>
+
         <th></th>
       </tr>
       <% @cargos.each do |cargo| %>
         <tr>
-                      <td><%= link_to cargo.nombre, cargo %></td>
-                    <td>
-            
+          <td><%= cargo.nombre  %></td>
+          <td>
+
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
