--- a/app/views/expedientes/_buscar_procedimiento.html.erb
+++ b/app/views/expedientes/_buscar_procedimiento.html.erb
@@ -20,7 +20,7 @@
 <div>
   <fieldset>
     <legend>Resultados</legend>
-    <table id="tabla-resultados" class="table table-striped table-bordered table-condensed">
+    <table id="tabla-resultados-procedimientos" class="table table-striped table-bordered table-condensed">
       <thead>
         <tr>
           <th>Nombre</th>
