--- a/app/views/procedimientos/index.js.erb
+++ b/app/views/procedimientos/index.js.erb
@@ -1,1 +1,1 @@
-$('#tabla-resultados tbody').html("<%= escape_javascript( render( :partial => 'tabla_resultados', :locals => { :procedimientos => @procedimientos })) %>")
+$('#tabla-resultados-procedimientos tbody').html("<%= escape_javascript( render( :partial => 'tabla_resultados', :locals => { :procedimientos => @procedimientos })) %>")
