cambios en el Index de Cargos, Entes y Roles

--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -12,7 +12,7 @@
             <td><%= label_tag 'Nombre'%> </td>
             <td><%= text_field_tag 'nombre', params[:nombre]%> </td>
             <td>&nbsp;</td>
-            <td><%= submit_tag 'Buscar', :class => 'btn'%></td>
+            <td><%= submit_tag 'Buscar', :class => 'btn btn-primary'%></td>
           </tr>
         </table>
       <% end %>
