--- a/app/views/entes/index.html.erb
+++ b/app/views/entes/index.html.erb
@@ -14,7 +14,7 @@
           <td>&nbsp;</td>
           <td><%= label_tag "Nombre" %></td>
           <td><%= text_field_tag "nombre", params[:nombre]%></td>
-          <td><%= submit_tag 'Buscar', :class => 'btn'%> </td>
+          <td><%= submit_tag 'Buscar', :class => 'btn btn-primary'%> </td>
         </tr>
       </table>
     </fieldset>
