--- a/app/views/ciudades/index.html.erb
+++ b/app/views/ciudades/index.html.erb
@@ -4,6 +4,20 @@
   </div>
 
   <div class="well">
+    <fieldset>
+      <legend>Buscador</legend>
+      <%= form_for controller_name, :method => :get do %>
+      <table>
+        <tr>
+          <td><%= label_tag 'Nombre' %></td>
+          <td><%= text_field_tag 'nombre', params[:nombre] %></td>
+          <td><%= label_tag 'Pais' %></td>
+          <td><%= select_tag 'territorio_id', options_from_collection_for_select(Pais.all, "id", "nombre", params[:territorio_id]), :prompt => '-- Seleccione --' %></td>
+          <td><%= submit_tag 'Buscar', :class => 'btn btn-primary'%></td>
+        </tr>
+      </table>
+      <% end %>
+    </fieldset>
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_ciudad_path, :class => 'btn btn-primary' %>
   </div>
   <br />
