--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -4,6 +4,18 @@
   </div>
 
   <div class="well">
+    <fieldset>
+      <legend>Buscador</legend>
+      <%= form_for controller_name, :method => :get do %>
+      <table>
+        <tr>
+          <td><%= label_tag 'Nombre' %></td>
+          <td><%= text_field_tag 'nombre', params[:nombre] %></td>
+          <td><%= submit_tag 'Buscar', :class => 'btn btn-primary' %></td>
+        </tr>
+      </table>
+      <% end %>
+    </fieldset>
     <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_pais_path, :class => 'btn btn-primary' %>
   </div>
   <br />
