--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -50,8 +50,8 @@
             <ul id="menu1" class="dropdown-menu">
               <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_usuario_path(usuario) %></li>
               <li><%= link_to icon_tag('Cambiar Clave', :class => 'icon-pencil'), cambiar_clave_path(usuario) %></li>
+              <li><%= link_to icon_tag('Modificar Datos', :class => 'icon-pencil'), modificar_datos_path(usuario) %></li>
               <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-
             </ul>              
           </div>
         </td>
