--- a/app/views/usuarios/modificar_datos.html.erb
+++ b/app/views/usuarios/modificar_datos.html.erb
@@ -3,7 +3,7 @@
     <h1>Editar Usuario</h1>
   </div>
 
-  <%= simple_form_for @usuario, :html => { :class => 'form-horizontal' }  do |f| %>
+  <%= simple_form_for @usuario, :url => modificar_datos_grabar_path, :html => { :class => 'form-horizontal' }  do |f| %>
     <fieldset>
       <%= f.error_notification %>
 
