--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -1,41 +1,47 @@
 <section>
+  <!--
   <div class="alert-message notice" style="margin-top:20px;">    
     <p><%= notice %></p>
   </div> 
+  -->
 
   <div class="page-header">
     <h1>usuario</h1>
   </div>
 
-   <div class="well">
-    <%= link_to 'Editar', edit_usuario_path(@usuario), :class => 'btn primary' %>
-    <%= link_to 'Borrar', @usuario, confirm: 'Estás seguro?', method: :delete, class: 'btn' %>
-    <%= link_to 'Ver Todos', usuarios_path, class: 'btn' %>
-  </div>
+  <div class="well">
+    <%= link_to icon_tag('Editar', :class => 'icon-pencil icon-white'), edit_usuario_path(@usuario), :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Cambiar Clave', :class => 'icon-lock icon-white'), cambiar_clave_path(@usuario), method: :cambiar_clave, class: 'btn btn-primary' %>
+    <%= link_to icon_tag('Modificar Datos', :class => 'icon-edit icon-white'), modificar_datos_path(@usuario), method: :modificar_datos, class: 'btn btn-primary' %>
+    <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @usuario, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
+    <%= link_to icon_tag('Listar Usuarios', :class => 'icon-eye-open icon-white'), usuarios_path, :class => 'btn btn-primary' %>
+        </div>
+        <p>
 
-      <p>
-      <b>Nombres:</b>
-      <%= @usuario.nombres %>
-    </p>
+        <dl>
+          <dt>Usuario</dt>
+          <dd><%= @usuario.login %></dd>
 
-      <p>
-      <b>Apellidos:</b>
-      <%= @usuario.apellidos %>
-    </p>
+          <dt>E-mail</dt>
+          <dd><%= @usuario.email %></dd>
 
-      <p>
-      <b>Documento:</b>
-      <%= @usuario.documento %>
-    </p>
+          <dt>Nombre(s)</dt>
+          <dd><%= @usuario.nombres %></dd>
 
-      <p>
-      <b>Ente:</b>
-      <%= @usuario.ente_id %>
-    </p>
+          <dt>Apellido(s)</dt>
+          <dd><%= @usuario.apellidos %></dd>
 
-      <p>
-      <b>Rol:</b>
-      <%= @usuario.rol.nombre %>
-    </p>
+          <dt>Documento</dt>
+          <dd><%= @usuario.documento %></dd>
 
-  </section>
+          <dt>Organismo</dt>
+          <dd><%= @usuario.ente.nombre %></dd>
+
+          <dt>Rol</dt>
+          <dd><%= @usuario.rol.nombre %></dd>
+        </dl>
+
+      </p>
+
+
+      </section>
