--- a/app/views/procesos/index.html.erb
+++ b/app/views/procesos/index.html.erb
@@ -12,7 +12,7 @@
         <%= link_to 'Filtrar <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
         <ul id="menu1" class="dropdown-menu" style="max-width: 500px;">
           <% @macroprocesos.each do |macroproceso| %>
-          <li><%= link_to macroproceso.codigo_nombre, procesos_path(macroproceso_id: macroproceso.id) %></li>
+            <li><%= link_to macroproceso.codigo_nombre, procesos_path(macroproceso_id: macroproceso.id) %></li>
           <% end %>
         </ul>              
       </div>
@@ -23,6 +23,20 @@
           <%= link_to icon_tag('Formato 38', :class => 'icon-print'), "javascript:;", :class => 'btn disabled' %>
         <% end %>
       </div>
+      <hr />
+      <%= form_tag controller_name, :class => 'form-inline', :method => :get do %>
+        <%= link_to icon_tag('Todos', :class => 'icon-eye-open icon-white'), procesos_path, :class => 'btn btn-primary' %>
+        <i class="icon-th-large"></i>
+        <%= label_tag 'Buscar' %>
+        <%= text_field_tag :valor, params[:valor] %>
+        <%= label_tag 'Tipo' %>
+        <%= select_tag :tipo_busqueda, options_for_select(Proceso::TIPO_BUSQUEDA.map{|c| [c,c]}, params[:tipo_busqueda]) %>
+        <%= submit_tag 'Buscar', :class => 'btn btn-primary' %>
+        <hr />
+        <%= label_tag 'Cargo' %>
+        <%= select_tag :filtro_cargo, options_from_collection_for_select(Cargo.all, 'id', 'nombre', params[:filtro_cargo]), :prompt => '-- Seleccione --'  %>
+        <%= submit_tag 'Filtrar', :class => 'btn btn-primary' %>
+      <% end %>
     </div>
   </div>
   <br />
