--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -56,7 +56,7 @@
           
         </div>
 
-          <%= render 'tareas', :tareas => @tareas %>
+          <%= render 'tareas', :vista_tareas => @vista_tareas %>
 
             <div class="span11 well-simple">
               <fieldset>
