separado personas fisicas, personas juridicas, organismos internos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,8 +83,10 @@
         <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              <li class="nav-header">Entes</li>
-              <li><%= link_to 'Personas', entes_path %></li>
+              <li class="nav-header">Personas/Organismos</li>
+              <li><%= link_to 'Personas Fisicas', personas_fisicas_path %></li>
+              <li><%= link_to 'Personas Juridicas', personas_juridicas_path %></li>
+              <li><%= link_to 'Organismos Internos', organismos_internos_path %></li>
               <li class="nav-header">Procesos</li>
               <li><%= link_to 'MacroProcesos', macroprocesos_path %></li>
               <li><%= link_to 'Procesos', procesos_path %></li>
