eiminado migrates personas juridicas y organismos

--- a/app/views/personas_juridicas/index.html.erb
+++ b/app/views/personas_juridicas/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Personas Juridicas <small>Lista de personas_juridicas</small></h1>
+    <h1>Personas Juridicas <small>Disponibles</small></h1>
   </div>
 
   <div class="well">
