--- a/app/views/personas_fisicas/new.html.erb
+++ b/app/views/personas_fisicas/new.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Agregar Persona Fisica</h1>
+    <h1>Agregar Persona F&iacute;sica</h1>
   </div>
 
 <%= render 'form' %>
