--- a/app/views/personas_fisicas/edit.html.erb
+++ b/app/views/personas_fisicas/edit.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Editar Persona Fisica</h1>
+    <h1>Editar Persona F&iacute;sica</h1>
   </div>
 
 <%= render 'form' %>
