--- a/app/views/personas_fisicas/show.html.erb
+++ b/app/views/personas_fisicas/show.html.erb
@@ -1,6 +1,6 @@
 <section>  
   <div class="page-header">
-    <h1>Persona fisica</h1>
+    <h1>Persona f&iacute;sica</h1>
   </div>
 
    <div class="well">
